--- a/esercizio-DADI/index.html
+++ b/esercizio-DADI/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>email</title>
+    <title>Document</title>
 
 
     <link rel="stylesheet" href="css/style.css">
@@ -14,18 +14,7 @@
 <body>
 
 
-    <h1>controllo delle email</h1>
 
-    <form action="">
-
-
-        <label for="email">Scrivi la tua email: </label>
-        <input type="email" name="email" id="email" required>
-
-        <button id="btn">
-            provaci!!!
-        </button>
-    </form>
 
 
     <script src="js/script.js"></script>
